--- a/src/Note/Note.css
+++ b/src/Note/Note.css
@@ -8,6 +8,21 @@
   max-width: 380px;
   padding: 8px 0 8px 8px;
   position: relative;
+  z-index: 2;
+}
+
+.NoteListMain .spinner{
+  --note-height: 88px;
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  color: #cacaca;
+  height: var(--note-height);
+  margin-bottom: 8px;
+  width: 380px;
+  padding: 8px 0 8px 8px;
+  position: absolute;
+  z-index: 1;
 }
 
 .Note__delete {
