--- a/src/NoteListMain/NoteListMain.css
+++ b/src/NoteListMain/NoteListMain.css
@@ -8,11 +8,13 @@
 .NoteListMain__button-container {
   max-width: 380px;
   margin: 0 10px;
+  padding-top: 60px;
 }
 
 .NoteListMain__add-note-button {
   margin: 0 auto 20px;
 }
+
 .NoteListMain__add-note-button:hover {
   background-color: #29862e;
   color: white;
