--- a/src/NoteListNav/NoteListNav.css
+++ b/src/NoteListNav/NoteListNav.css
@@ -12,7 +12,7 @@
 .NoteListNav__button-wrapper {
   margin: 0 0 0 auto;
   max-width: 180px;
-  padding-top: 50px;
+  padding-top: 65px;
 }
 
 .NoteListNav__add-folder-button {
@@ -32,21 +32,24 @@
   font-size: 20px;
   margin: 0 0 8px auto;
   max-width: 180px;
-  padding: 8px 16px;
+  padding: 8px 8px 8px 16px;
   text-decoration: none;
   position: relative;
   z-index: 2;
 }
 
+.NoteListNav__folder-link button{
+  float: left;
+  margin-right: 15px;
+}
+
 .NoteListNav__list .spinner {
-  text-align: center;
   color: #b5b3b3;
   display: block;
   font-family: var(--custom-font);
-  font-size: 20px;
+  font-size: 16px;
   margin: 0 0 8px auto;
-  width: 180px;
-  padding: 8px 16px;
+  width: 100px;
   position: absolute;
   right: 0px;
   z-index: 1;
@@ -67,3 +70,8 @@
   font-size: 10px;
 }
 
+@media only screen and (max-width: 600px){
+  .NoteListNav__folder-link{
+    font-size: 16px;
+  }
+}
